<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ImageView
        android:id="@+id/tree_logo"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="92dp"
        android:scaleType="centerCrop"
        android:src="@drawable/treeo_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/choose_your_language_nfirst"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tree_logo" />

    <View
        android:id="@+id/line_1"
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/view_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_choose_language" />

    <TextView
        android:id="@+id/choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/choose_language"
        android:textColor="#646567"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_language">

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/united_kingdom_flag_xs"
            android:drawablePadding="10dp"
            android:text="@string/english"
            android:textColor="#DE000000" />

        <RadioButton
            android:id="@+id/radio_luganda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/uganda_flag_xs"
            android:drawablePadding="10dp"
            android:text="@string/luganda"
            android:textColor="#DE000000" />

        <RadioButton
            android:id="@+id/radio_bahasa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/indonesia_flag_xs"
            android:drawablePadding="11dp"
            android:text="@string/bahasa"
            android:textColor="#DE000000" />

        <RadioButton
            android:id="@+id/radio_spanish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/spain_flag_xs"
            android:drawablePadding="10dp"
            android:text="@string/spanish"
            android:textColor="#DE000000" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/text_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>