<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TitleTheme"
        app:titleTextColor="@color/app_green">

        <TextView
            android:id="@+id/title_text_clear_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/orange_bg"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/land_photo_1_3"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/checkbox_state_list"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="0.5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp"
                app:contentPaddingBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <ImageView
                    android:id="@+id/imageViewClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/land_photo" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:maxWidth="280dp"
                android:text="@string/check_photo_validity"
                android:textAppearance="@style/HeadlineTheme"
                android:textColor="@color/app_green"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructions_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:paddingBottom="5dp"
                android:text="@string/check_photo_txt"
                android:textAppearance="@style/TextTheme"
                android:textColor="@color/gray_20"
                android:textSize="16sp"
                />

            <android.widget.Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_state_list"
                android:drawableEnd="@drawable/ic_arrow_forward_16"
                android:drawablePadding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_continue"
                android:textAppearance="@style/TextThemeButton"
                android:textColor="@color/text_color_state_list"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructions_text1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_retake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_arrow_back_16"
                android:drawablePadding="10dp"
                android:maxWidth="280dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/retake_photo"
                android:textAppearance="@style/TextTheme"
                android:textColor="@color/app_green"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
