<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".ui.authentication.onboarding.screens.OnBoardingLandingPage">

    <ImageView
        android:id="@+id/tree_logo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/treeo_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:maxHeight="230dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tree_logo"
        app:srcCompat="@drawable/treeo_illustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxWidth="280dp"
        android:text="@string/text_create_a_better_income"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/app_green"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:maxWidth="280dp"
        android:text="@string/text_treeo_goal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@+id/landingPageButton"
        app:layout_constraintStart_toStartOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/line_drawable"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView" />

    <android.widget.Button
        android:id="@+id/landingPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_state_list"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/get_started"
        android:textColor="@color/text_color_state_list"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2" />

</androidx.constraintlayout.widget.ConstraintLayout>